removed images and useless files

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1528,36 +1528,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyze the role of links:\n",
-    "adapt the code to record the number of times that each link transmits the disease to another node. We can do this by simply storing for each node form which other node it obtained the infection.\n",
-    "\n",
-    "Run 20 simulations using random nodes as seeds and p = 0.5. For each simulation, record\n",
-    "which links are used to infect yet uninfected nodes (either by first infection-carrying\n",
-    "mails(edges) arriving to susceptible nodes or by infecting edges(mails) arriving before the already\n",
-    "recorded infection time)\n",
-    "Run the simulations, and compute the fraction of times that each link is used for\n",
-    "infecting the disease (fij )\n",
-    "\n",
-    "Create scatter plots showing fij as a function of the following link properties:\n",
-    "i) link weight wij\n",
-    "8\n",
-    "ii) unweighted link betweenness centrality ebij (edge betweenness centrality in\n",
-    "networkx)\n",
-    "Compute also the Spearman correlation coefficients between fij and the two link-wise\n",
-    "measures."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Further extension: change probability of infection making it proportional to the edge weight?????"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Experiment 1 - p=1\n",
     "The goal of this test is to analyze the case in which p=1, i.e. the virus is always transmitted.\n",
     "We'll perform the test for 5 random seed nodes and plot the combined plot.<br>\n",
@@ -1745,7 +1715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With p=1.0 the ρ(t) reaches a value of almost 75%, meaning that 75% of all the nodes of the network get infected."
+    "With p=1.0 the ρ(t) reaches a value of almost 85%, meaning that 85% of all the nodes of the network get infected."
    ]
   },
   {
@@ -1838,9 +1808,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As expected, we can see that starting the infection with the node having the\n",
+    "highest degree centrality leads to higher infections rate than with the other nodes. <br>\n",
     "An interesting aspect that emerges from the above plot is that the main differences in spreading speed between different seed nodes are mostly visible at the beginning of the virus spreading. This is basically due to two aspects: \n",
-    "* the spreading speed is faster if the first node is more connected\n",
-    "* it is faster also becuase of the timestamps of contacts between nodes: as we can imagine the node number 59805 starts to spread the virus after many timestemps, and this is due to the fact that it start contacting other nodes a lot of time after the beginning of the virus spreading. <br>\n",
+    "* the spreading speed is faster if the seed node is more connected\n",
+    "* it is faster also because of the timestamps of contacts between nodes: as we can imagine the node number 14247 starts to spread the virus after many timestamps, and this is due to the fact that it start contacting other nodes a lot of time after the beginning of the virus spreading. <br>\n",
     "\n",
     "As an overall conclusion for this experiment, we can say that the prevalence of the disease may change remarkably depending on the seed node."
    ]
@@ -1937,14 +1909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can visualize the nodes with the higher median infection time which in some way represent the most secure nodes:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Experiment 5 - Correlation"
+    "## Experiment 5 - Best infection time predictor"
    ]
   },
   {
@@ -2066,7 +2031,7 @@
     "We'll fix the infection probability to 0.5 and for each immunization strategy we'll average the results over 20 runs.<br>\n",
     "In order to reduce the variance due to the selection of the seed nodes, we'll use the same nodes for investigating all immunization strategies.<br>\n",
     "We'll proceed in this way:\n",
-    "* we'll first select a list of immunized nodes\n",
+    "* we'll first select a list of 30 immunized nodes for each strategy\n",
     "* then, we'll select 40 random seed nodes such as none of them belongs to the group of immunized nodes in any of the different strategies.\n",
     "* After performing the simulations, we'll plot the prevalence ρ(t) for the 5 different immunization strategies, always immunizing 30 nodes.\n",
     "\n",
